fixed search container, fixed footer to the proper alignment, fixed the size of the leaf

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,8 +1,19 @@
-html,
+
 body {
+ display:flex;
+ flex-direction:column;
+
+min-height:100vh;
+padding:0;
+margin:0;
+}
+
+.content {
+  flex: 1 0 auto;
 }
 .main-nav {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
@@ -70,8 +81,8 @@ body {
   margin: 0 auto;
   border-radius: 24px;
   max-width: 584px;
-  height: 44px;
-  padding: 14px 8px;
+  
+  padding:0px  8px;
   text-align: center;
   align-items: center;
 }
@@ -90,7 +101,7 @@ body {
   height: 34px;
   font-size: 16px;
 
-  width: 483px;
+  min-width: 200px;
 }
 
 .button {
@@ -117,7 +128,6 @@ body {
 .search-img {
   width: 10px;
   padding: 15px;
- 
 }
 
 .mic {
@@ -159,49 +169,25 @@ body {
   user-select: none;
 }
 
-footer {
-  border: 1px solid black;
-  display: block;
-  margin: 10px 0px;
-  width: 1200px;
-  height: 93px;
-  font-size: 14px;
-  font-family: Roboto, arial, sans-serif;
-  color: #202124;
-  padding: 0px 20px;
-  flex-direction: row;
-  align-items: center;
-  padding: 15px;
-  white-space: nowrap;
+footer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   background: #f2f2f2;
- 
-  
+  align-items: center;
+flex-shrink: 0;
+padding:0px 20px;
+
+
 }
 
 .leaf{
-  border:1px solid black;
-height:14px;
-margin-right:6px;
-align-items:center;
+  height: 14px;
+    margin-right: 6px;
 }
 
-
-.p{
-  border:1px solid black;
-
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
 }
-
-
-
-.left{
-  border:1px solid black;
-  justify-content: space-evenly;
-  order:1;
-}
-.right{
-  border:1px solid black;
-justify-content:center;
-}
-
-
-
